Applied stop parallax on small screen to parallax-2

--- a/app/assets/stylesheets/components/_parallax.scss
+++ b/app/assets/stylesheets/components/_parallax.scss
@@ -25,21 +25,21 @@
   text-shadow: 1px 0px 3px rgba(0,0,0,0.3);
 
   h2 {
-    font-size: 70px;
+    font-size: 4.375rem;
     letter-spacing: 10px;
     font-weight: bold;
   }
 
   p {
     margin-bottom: 0;
-    font-size: 16px;
+    font-size: 1rem;
     text-transform: uppercase;
     letter-spacing: 8px;
   }
 }
 /* Turn off parallax scrolling for tablets and phones. Increase/decrease the pixels if needed */
 @media only screen and (max-device-width: 1024px) {
-  .parallax {
+  .parallax, .parallax-2 {
       background-attachment: scroll;
   }
 }
