--- a/app/assets/stylesheets/pages/_about.scss
+++ b/app/assets/stylesheets/pages/_about.scss
@@ -9,7 +9,7 @@ body {
   padding: 60px;
 }
 .about-flex-item {
-  flex: 0 0 50%;
+  flex: 0 0 48%;
   margin: 30px 0;
 }
 .card-btns {
